<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/priviledge_content"
        android:orderInCategory="1"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="2"
        android:title="@string/about_this"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="3"
        android:title="@string/share_this"
        app:showAsAction="never"/>
    <item
        android:id="@+id/helping"
        android:orderInCategory="4"
        android:title="@string/send_feedback"
        app:showAsAction="never"/>


</menu>