<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/blood"
    tools:context="Forgotten">

    <TextView
        android:id="@+id/tx_forgttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ed_mail"
        android:layout_alignBottom="@+id/ed_mail"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/progressBar"
        android:text="@string/retrieve"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/message_box"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed_mail"
        android:layout_marginTop="74dp"
        android:text="@string/bt_reset_password"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tx_forgttn"
        android:layout_below="@+id/btn_reset_password"
        android:layout_marginTop="37dp"
        android:text="@string/bt_back"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_marginStart="14dp"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/tx_forgttn"
        android:ems="10"
        android:hint="@string/send_via_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        android:textStyle="bold" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="20dp"
        android:visibility="gone" />
</RelativeLayout>
