<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_werrason"
    tools:context="com.example.calvo_linus.kuja.loginActivity">

    <ImageView
        android:id="@+id/awilo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/mama"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:background="@drawable/blooddrive"
        android:scaleType="center"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/mama"
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="#40FFFFFF"
        android:visibility="visible">

        <EditText
            android:id="@+id/ed_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/bt_login"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:textColor="#00ffec"
            android:textColorHint="#ffff"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/ed_password"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ed_name"
            android:layout_below="@+id/ed_name"
            android:layout_marginTop="19dp"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#00ffec"
            android:textColorHint="#ffff"
            android:textStyle="italic" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="250dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ed_password"
            android:layout_marginStart="25dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/chora"
            android:text="@string/login"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_alignEnd="@id/tx_forgotten"
            android:layout_alignStart="@+id/tx_forgotten"
            android:layout_alignTop="@+id/v2"
            android:background="#00FFFF" />

        <TextView
            android:id="@+id/tx_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bt_login"
            android:layout_below="@+id/bt_login"
            android:layout_marginTop="29dp"
            android:text="@string/karibu"
            android:textColor="#0000ff"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tx_forgotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tx_create"
            android:layout_alignBottom="@+id/tx_create"
            android:layout_alignEnd="@+id/bt_login"
            android:textAllCaps="false"
            android:text="@string/wich_will"
            android:textColor="#00ffec"
            android:textSize="20sp"
            android:textStyle="italic"
           />

        <TextView
            android:id="@+id/t_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/v1"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/tx_create"
            android:text="@string/or"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />

        <View
            android:id="@+id/v2"
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_alignStart="@+id/tx_create"
            android:layout_below="@+id/tx_create"
            android:layout_marginTop="17dp"
            android:background="#00FFFF" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="21dp" />

    </RelativeLayout>


</RelativeLayout>
